
* A Bug in the UML2 Metamodel has been fixed.
  - Class diagrams using stereotypes are now adapted correctly.
  
* Some bugs of the OCL Parser / Editor have been fixed.
  - Derive and Init constraints defined for static properties are now parsed correctly.
  - The escape underscore for reserved words can now be used.
  - The ASM of nested LetExpressions now has the right order.
  
* Improvements on Ocl2Java
  - Generated aspects are named according to their constraints.
  - Statically defined operations and properties are now instrumented correctly.
  - No new super classes are generated for definitions, initial and derived values are
    introduced anymore.
  - Definitions, Initial and Derived values should now work correctly if fields are 
    accessed directly from other classes.
  - Type Literals are now transformed correctly in all known contexts.
  - InvalidLiterals should now be transformed correctly in all known contexts.
  - Generic types in LetExpressions are now transformed correctly.
  - Nested IterateExpressions using the same names for iterator variables are now
    handled correctly.
  - Nested IteratorExpressions using the same names for iterator variables are now
    handled correctly.
  - OclAny.asSet() is now transformed correctly.
  - OclAny.oclIsUndefined() now works on Java primitive types as well.
  - IsUnique() iterators are now transformed correctly if their body expression result
    in another type than the collection's element type.

* Changes on Ocl2SQL
  - for nested where statements now generated join statements
  - the IteratorExp of OCL will now correctly generated to SQL
  - difference sql code for managed and not managed key references (new template) 

Tests
-----
* Ocl2Java
  - Some test cases have been added testing the right instrumentation of all constraint 
    kinds.
    
    
Release 3.0 (September, 29th, 2010)
===============================================

* A new OCL Editor/Parser is now available with Dresden OCL.